tests/paczka1/fuzzy1/74183328.err
Error in line 2: 2uAvE5L33ya S150 88,7
Error in line 6: 2isnme8LJ S243 -5,4
Error in line 8: S927 A815 68,7
Error in line 4: 2isnme8LJ S243 76,5
Error in line 11: 2isnme8LJ A815 19,4
Error in line 18: nIP42w A815 81,92
